...
                            Expanded(
                              child: Column(
                                children: [
                                  Expanded(
                                    child: Container(
                                      key: const ValueKey(
                                          'player.video.surface'),
                                      margin: _isWindowFullscreen
                                          ? EdgeInsets.zero
                                          : const EdgeInsets.fromLTRB(
                                              18, 18, 18, 12),
                                      decoration: BoxDecoration(
                                        color: Colors.black,
...
    return SizedBox(
      height: 66,
      child: Padding(
        padding: const EdgeInsets.symmetric(horizontal: 18),
        child: Row(children: [
          IconButton(
            key: const ValueKey('player.back'),
            tooltip: '返回媒体库',
            onPressed: onBack,
            icon: const Icon(Icons.arrow_back_rounded),
            color: const Color(0xffcbd5e1),
          ),
          const Icon(Icons.play_arrow_rounded,
...
